Fixes long page names wrapping in a folder menu (PIRATE-2334)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -211,6 +211,13 @@ footer.pageFooter {
   font-weight: @font-swatch6-font-weight;
   letter-spacing: @font-swatch6-letter-spacing;
   color: @font-swatch6-color;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  hyphens: auto;
+
   @media @tablet {
     padding: 10px 0;
   }
